Added a score system and improved UI for the Snake game

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <link rel="stylesheet" href="styles.css">
+    <div id="scoreBoard" style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); color: white; font-size: 24px;">Score: 0</div>
 </head>
 <body>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
